check for an active org in code examples

--- a/docs/references/javascript/organization/domains.mdx
+++ b/docs/references/javascript/organization/domains.mdx
@@ -7,9 +7,11 @@ description: Learn about the methods on the Organization object that allow you t
 
 These methods on the [`Organization`](/docs/references/javascript/organization/organization) object allow you to manage the domains of an organization.
 
-<Callout type="warning">
-  **Verified domains** for organizations must be enabled in your Clerk settings for these methods to work. See the [Verified domains](/docs/organizations/verified-domains) guide to learn more.
-</Callout>
+The following examples assume:
+
+- you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
+- you have [enabled the Organizations feature in your Clerk Dashboard](/docs/organizations/overview#enable-organizations-in-your-application)
+- you have [enabled verified domains for your organization](/docs/organizations/verified-domains)
 
 ## `createDomain()`
 
@@ -44,9 +46,24 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
-  await clerk.organization.createDomain("test-domain.com")
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
+  // Check for an active organization
+  if (clerk.organization) {
+    await clerk.organization.createDomain("test-domain.com")
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -74,10 +91,26 @@ if (clerk.user) {
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
+
       if (Clerk.user) {
-        await Clerk.organization.createDomain("test-domain.com")
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
+        // Check for an active organization
+        if (Clerk.organization) {
+          await Clerk.organization.createDomain("test-domain.com")
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -127,9 +160,24 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
-  await clerk.organization.getDomains()
-    .then((res) => console.log(res))
-    .catch((error) => console.log("An error occurred:", error.errors));
+  // Check for an active organization
+  if (clerk.organization) {
+    await clerk.organization.getDomains()
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -157,10 +205,26 @@ if (clerk.user) {
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
+
       if (Clerk.user) {
-        await Clerk.organization.getDomains()
-          .then((res) => console.log(res))
-          .catch((error) => console.log("An error occurred:", error.errors));
+        // Check for an active organization
+        if (Clerk.organization) {
+          await Clerk.organization.getDomains()
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
@@ -208,12 +272,27 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
-  const domainId = "orgdmn_123";
+  // Check for an active organization
+  if (clerk.organization) {
+    const domainId = "orgdmn_123";
 
-  await clerk.organization
-    .getDomain({ domainId })
-    .then((res) => console.log(`Domains:`, res))
-    .catch((error) => console.log("An error occurred:", error.errors));
+    await clerk.organization
+      .getDomain({ domainId })
+      .then((res) => console.log(`Domains:`, res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
 } else {
   document.getElementById("app").innerHTML = `
     <div id="sign-in"></div>
@@ -241,13 +320,29 @@ if (clerk.user) {
   <script>
     window.addEventListener("load", async function () {
       await Clerk.load();
-      if (Clerk.user) {
-        const domainId = "orgdmn_123";
 
-        await Clerk.organization
-          .getDomain({ domainId })
-          .then((res) => console.log(`Domains:`, res))
-          .catch((error) => console.log("An error occurred:", error.errors));
+      if (Clerk.user) {
+        // Check for an active organization
+        if (Clerk.organization) {
+          const domainId = "orgdmn_123";
+
+          await Clerk.organization
+            .getDomain({ domainId })
+            .then((res) => console.log(`Domains:`, res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
       } else {
         document.getElementById("app").innerHTML = `
           <div id="sign-in"></div>
