--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -179,7 +179,7 @@ function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitatio
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js" {12}
+```js filename="main.js" {13}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -187,6 +187,7 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
+  // Check for an active organization
   if (clerk.organization) {
     const emailAddress = "test@test.com";
     const role = "org:member";
@@ -218,7 +219,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html" {22}
+```html filename="index.html" {23}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -236,6 +237,7 @@ if (clerk.user) {
       await Clerk.load();
 
       if (Clerk.user) {
+        // Check for an active organization
         if (Clerk.organization) {
           const emailAddress = "test@test.com";
           const role = "org:member";
@@ -298,7 +300,7 @@ function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitat
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js" {12}
+```js filename="main.js" {13}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -306,11 +308,12 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
+  // Check for an active organization
   if (clerk.organization) {
     const emailAddresses = ["test@test.com", "test2@test.com", "test3@test.com"];
     const role = "org:member";
 
-    await clerk.organization.inviteMember({ emailAddresses, role })
+    await clerk.organization.inviteMembers({ emailAddresses, role })
       .then((res) => console.log(res))
       .catch((error) => console.log("An error occurred:", error.errors));
   } else {
@@ -337,7 +340,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html" {22}
+```html filename="index.html" {23}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -355,11 +358,12 @@ if (clerk.user) {
       await Clerk.load();
 
       if (Clerk.user) {
+        // Check for an active organization
         if (Clerk.organization) {
           const emailAddresses = ["test@test.com", "test2@test.com", "test3@test.com"];
           const role = "org:member";
 
-          await Clerk.organization.inviteMember({ emailAddresses, role })
+          await Clerk.organization.inviteMembers({ emailAddresses, role })
             .then((res) => console.log(res))
             .catch((error) => console.log("An error occurred:", error.errors));
         } else {
