--- a/docs/references/javascript/organization/domains.mdx
+++ b/docs/references/javascript/organization/domains.mdx
@@ -38,7 +38,7 @@ function createDomain: (domainName: string) => Promise<OrganizationDomainResourc
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
+```js filename="main.js" {10}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -75,7 +75,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html"
+```html filename="index.html" {20}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -152,7 +152,7 @@ function getDomains(params?: GetDomainsParams): Promise<ClerkPaginatedResponse<O
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
+```js filename="main.js" {10}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -189,7 +189,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html"
+```html filename="index.html" {20}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -264,7 +264,7 @@ function getDomain(params: GetDomainParams): Promise<OrganizationDomain>;
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js"
+```js filename="main.js" {12}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -276,8 +276,7 @@ if (clerk.user) {
   if (clerk.organization) {
     const domainId = "orgdmn_123";
 
-    await clerk.organization
-      .getDomain({ domainId })
+    await clerk.organization.getDomain({ domainId })
       .then((res) => console.log(`Domains:`, res))
       .catch((error) => console.log("An error occurred:", error.errors));
   } else {
@@ -304,7 +303,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html"
+```html filename="index.html" {22}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -326,8 +325,7 @@ if (clerk.user) {
         if (Clerk.organization) {
           const domainId = "orgdmn_123";
 
-          await Clerk.organization
-            .getDomain({ domainId })
+          await Clerk.organization.getDomain({ domainId })
             .then((res) => console.log(`Domains:`, res))
             .catch((error) => console.log("An error occurred:", error.errors));
         } else {
