add syntax highlighting and example description

--- a/docs/references/javascript/organization/membership-request.mdx
+++ b/docs/references/javascript/organization/membership-request.mdx
@@ -7,6 +7,12 @@ description: Learn about the methods on the Organization object that allow you t
 
 These methods on the [`Organization`](/docs/references/javascript/organization/organization) object allow you to manage the membership requests for an organization.
 
+The following examples assume:
+
+- you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
+- you have [enabled the Organizations feature in your Clerk Dashboard](/docs/organizations/overview#enable-organizations-in-your-application)
+- you have [enabled **Verified domains** and **Automatic suggestion** for your organization](/docs/organizations/verified-domains)
+
 ## `getMembershipRequests()`
 
 Retrieve the list of membership requests for the currently active organization.
@@ -30,6 +36,8 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
 | `Promise<ClerkPaginatedResponse<OrganizationMembershipRequestResource>>` | This method returns a `Promise` that resolves to a [`ClerkPaginatedResponse`](/docs/references/javascript/types/clerk-paginated-response) of [`OrganizationMembershipRequest`](/docs/references/javascript/organization-membership-request) objects. |
 
 ### Example
+
+The following example demonstrates how to use the `getMembershipRequests()` method to render a table of membership requests for the active organization. To ease the development process, the response or error message of a method will be displayed on the user interface.
 
 <InjectKeys>
 
@@ -90,7 +98,7 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
 
   And your JavaScript file should look like this:
 
-  ```js filename="main.js" {13,40,59, }
+  ```js filename="main.js" {13}
   import Clerk from '@clerk/clerk-js';
 
   // Initialize Clerk with your Clerk publishable key
@@ -159,9 +167,9 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
       /**
        * Checks if a user is an admin of the
        * currently active organization and
-       * renders the organization's memberships.
+       * renders the organization's membership requests.
        */
-      async function checkAdminAndRenderMemberships() {
+      async function checkAdminAndRenderRequests() {
         const organizationId = clerk.organization.id;
 
         const organizationMemberships =
@@ -182,7 +190,7 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
         renderMembershipRequests(currentOrganization, isAdmin);
       }
 
-      checkAdminAndRenderMemberships();
+      checkAdminAndRenderRequests();
     } else {
       // If there is no active organization,
       // mount Clerk's <OrganizationSwitcher />
@@ -209,7 +217,7 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
   </Tab>
 
   <Tab>
-  ```html filename="index.html"
+  ```html filename="index.html" {65}
   <!doctype html>
   <html lang="en">
     <head>
@@ -329,9 +337,9 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
               /**
               * Checks if a user is an admin of the
               * currently active organization and
-              * renders the organization's memberships.
+              * renders the organization's membership requests.
               */
-              async function checkAdminAndRenderMemberships() {
+              async function checkAdminAndRenderRequests() {
                 const organizationId = Clerk.organization.id;
 
                 const organizationMemberships =
@@ -353,7 +361,7 @@ function getMembershipRequests: (params?: GetMembershipRequestParams) => Promise
 
                 renderMembershipRequests(currentOrganization, isAdmin);
               }
-              checkAdminAndRenderMemberships();
+              checkAdminAndRenderRequests();
             } else {
               // If there is no active organization,
               // mount Clerk's <OrganizationSwitcher />
