--- a/docs/references/javascript/organization/domains.mdx
+++ b/docs/references/javascript/organization/domains.mdx
@@ -11,7 +11,7 @@ The following examples assume:
 
 - you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
 - you have [enabled the Organizations feature in your Clerk Dashboard](/docs/organizations/overview#enable-organizations-in-your-application)
-- you have [enabled verified domains for your organization](/docs/organizations/verified-domains)
+- you have [enabled **Verified domains** for your organization](/docs/organizations/verified-domains)
 
 ## `createDomain()`
 
