--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -42,211 +42,120 @@ function revoke(): Promise<OrganizationInvitation>;
 
 ### `revoke()` example
 
+The following example demonstrates how to revoke an organization invitation. It first gets the list of organization invitations using [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations) and then revokes the first invitation in the list.
+
 <InjectKeys>
 
-<Tabs type="npm-script" items={['NPM module', '<script>']}>
-  <Tab>
-    For the following example, your HTML file should look like this:
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js" {22}
+import Clerk from '@clerk/clerk-js';
 
-    ```html filename="index.html"
-    <!doctype html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Clerk + JavaScript App</title>
-      </head>
-      <body>
-        <div id="app"></div>
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
 
-        <h2>Invitations List</h2>
-        <ul id="invitations_list"></ul>
+if (clerk.user) {
+  if (clerk.organization) {
+    // Get list of organization invitations
+    const { totalCount, data } = await clerk.organization.getInvitations()
+      .then((res) => console.log(res))
+      .catch((error) => console.log(error.errors));
 
-        <script type="module" src="/main.js"></script>
-      </body>
-    </html>
-    ```
+    const invitations = data;
+    console.log(`Invitations:`, invitations);
 
-    And your JavaScript file should look like this:
-
-    ```js filename="main.js"
-    import Clerk from '@clerk/clerk-js';
-
-    // Initialize Clerk with your Clerk publishable key
-    const clerk = new Clerk('{{pub_key}}');
-    await clerk.load();
-
-    if (clerk.user) {
-      // Render list of organization invitations
-      async function renderInvitations(organization, isAdmin) {
-        const list = document.getElementById("invitations_list");
-        try {
-          const { totalCount, data } = await organization.getInvitations();
-
-          const invitations = data;
-
-          if (invitations.length === 0) {
-            list.textContent = "No invitations";
-          }
-
-          invitations.map((invitation) => {
-            const li = document.createElement("li");
-            li.textContent = `${invitation.emailAddress} - ${invitation.role}`;
-
-            // Add administrative actions: revoke invitation
-            if (isAdmin) {
-              const revokeBtn = document.createElement("button");
-              revokeBtn.textContent = "Revoke";
-              revokeBtn.addEventListener("click", async function (e) {
-                e.preventDefault();
-                await invitation.revoke();
-              });
-              li.appendChild(revokeBtn);
-            }
-            // Add the entry to the list
-            list.appendChild(li);
-          });
-        } catch (err) {
-          console.error(err);
-        }
-      }
-
-      // Gets the currently active org, checks if the current user
-      // is in the current org and if the user is an admin
-      // and then renders the invitations for the current org.
-      async function userAuthorizationBeforeRenderInvitations() {
-        // Get the currently active organization's ID.
-        const organizationId = clerk.organization.id;
-
-        // Check if the current user is in the currently active organization
-        const organizationMemberships =
-          await clerk.user.getOrganizationMemberships();
-
-        const currentMembership = organizationMemberships.find(
-          (membership) => membership.organization.id === organizationId
-        );
-        const currentOrganization = currentMembership.organization;
-
-        if (!currentOrganization) {
-          return;
-        }
-
-        // Check if the current user is an admin
-        const isAdmin = currentMembership.role === "org:admin";
-
-        renderInvitations(currentOrganization, isAdmin);
-      }
-
-      userAuthorizationBeforeRenderInvitations();
-    } else {
-      document.getElementById("app").innerHTML = `
-        <div id="sign-in"></div>
-      `;
-
-      const signInDiv = document.getElementById("sign-in");
-
-      clerk.mountSignIn(signInDiv);
+    if (invitations.length === 0) {
+      console.log("No invitations to revoke.");
     }
-    ```
-  </Tab>
 
-  <Tab>
-    ```html filename="index.html"
-      <div id="app"></div>
+    // Revoke the first invitation in the list
+    invitations[0].revoke()
+      .then((res) => console.log(res))
+      .catch((error) => console.log(error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
 
-      <h2>Invitations List</h2>
-      <ul id="invitations_list"></ul>
+    const orgSwitcherDiv = document.getElementById("org-switcher");
 
-      <!-- Initialize Clerk with your
-      Clerk publishable key and Frontend API URL -->
-      <script
-        async
-        crossorigin="anonymous"
-        data-clerk-publishable-key='{{pub_key}}'
-        src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
-        type="text/javascript"
-      ></script>
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
 
-      <script>
-        window.addEventListener("load", async function () {
-          await Clerk.load();
+  const signInDiv = document.getElementById("sign-in");
 
-          if (Clerk.user) {
-            // Render list of organization invitations
-            async function renderInvitations(organization, isAdmin) {
-              const list = document.getElementById("invitations_list");
-              try {
-                const { totalCount, data } = await organization.getInvitations();
+  clerk.mountSignIn(signInDiv);
+}
+```
 
-                const invitations = data;
+```html filename="index.html" {32}
+  <div id="app"></div>
 
-                if (invitations.length === 0) {
-                  list.textContent = "No invitations";
-                }
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
 
-                invitations.map((invitation) => {
-                  const li = document.createElement("li");
-                  li.textContent = `${invitation.emailAddress} - ${invitation.role}`;
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
 
-                  // Add administrative actions: revoke invitation
-                  if (isAdmin) {
-                    const revokeBtn = document.createElement("button");
-                    revokeBtn.textContent = "Revoke";
-                    revokeBtn.addEventListener("click", async function (e) {
-                      e.preventDefault();
-                      await invitation.revoke();
-                    });
-                    li.appendChild(revokeBtn);
-                  }
-                  // Add the entry to the list
-                  list.appendChild(li);
-                });
-              } catch (err) {
-                console.error(err);
-              }
-            }
+      if (Clerk.user) {
+        if (Clerk.organization) {
+        // Get list of organization invitations
+        const { totalCount, data } = await Clerk.organization.getInvitations()
+          .then((res) => console.log(res))
+          .catch((error) => console.log(error.errors));
 
-            // Gets the currently active org, checks if the current user
-            // is in the current org and if the user is an admin
-            // and then renders the invitations for the current org.
-            async function userAuthorizationBeforeRenderInvitations() {
-              // Get the currently active organization's ID.
-              const organizationId = Clerk.organization.id;
+        const invitations = data;
+        console.log(`Invitations:`, invitations);
 
-              // Check if the current user is in the currently active organization
-              const organizationMemberships =
-                await Clerk.user.getOrganizationMemberships();
+        if (invitations.length === 0) {
+          console.log("No invitations to revoke.");
+        }
 
-              const currentMembership = organizationMemberships.find(
-                (membership) => membership.organization.id === organizationId
-              );
-              const currentOrganization = currentMembership.organization;
+        // Revoke the first invitation in the list
+        invitations[0].revoke()
+          .then((res) => console.log(res))
+          .catch((error) => console.log(error.errors));
+      } else {
+        // If there is no active organization,
+        // mount Clerk's <OrganizationSwitcher />
+        // to allow the user to set an organization as active
+        document.getElementById("app").innerHTML = `
+          <h2>Select an organization to set it as active</h2>
+          <div id="org-switcher"></div>
+        `;
 
-              if (!currentOrganization) {
-                return;
-              }
+        const orgSwitcherDiv = document.getElementById("org-switcher");
 
-              // Check if the current user is an admin
-              const isAdmin = currentMembership.role === "org:admin";
+        Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+      }
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
 
-              renderInvitations(currentOrganization, isAdmin);
-            }
+        const signInDiv = document.getElementById("sign-in");
 
-            userAuthorizationBeforeRenderInvitations();
-          } else {
-            document.getElementById("app").innerHTML = `
-              <div id="sign-in"></div>
-            `;
-
-            const signInDiv = document.getElementById("sign-in");
-
-            Clerk.mountSignIn(signInDiv);
-          }
-        });
-      </script>
-    ```
-  </Tab>
-</Tabs>
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
 
 </InjectKeys>
