add the callout for 'this example assumes'

--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -44,6 +44,11 @@ function revoke(): Promise<OrganizationInvitation>;
 
 The following example demonstrates how to revoke an organization invitation. It first gets the list of organization invitations using [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations) and then revokes the first invitation in the list.
 
+The following example assumes:
+
+- you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
+- you have [enabled the Organizations feature in your Clerk Dashboard](/docs/organizations/overview#enable-organizations-in-your-application)
+
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
