--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -52,7 +52,7 @@ The following example assumes:
 <InjectKeys>
 
 <CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
-```js filename="main.js" {22}
+```js filename="main.js" {23}
 import Clerk from '@clerk/clerk-js';
 
 // Initialize Clerk with your Clerk publishable key
@@ -60,6 +60,7 @@ const clerk = new Clerk('{{pub_key}}');
 await clerk.load();
 
 if (clerk.user) {
+  // Check for an active organization
   if (clerk.organization) {
     // Get list of organization invitations
     const { totalCount, data } = await clerk.organization.getInvitations()
@@ -101,7 +102,7 @@ if (clerk.user) {
 }
 ```
 
-```html filename="index.html" {32}
+```html filename="index.html" {33}
   <div id="app"></div>
 
   <!-- Initialize Clerk with your
@@ -119,6 +120,7 @@ if (clerk.user) {
       await Clerk.load();
 
       if (Clerk.user) {
+        // Check for an active organization
         if (Clerk.organization) {
         // Get list of organization invitations
         const { totalCount, data } = await Clerk.organization.getInvitations()
