fix code example

--- a/docs/references/javascript/organization-invitation.mdx
+++ b/docs/references/javascript/organization-invitation.mdx
@@ -64,9 +64,7 @@ if (clerk.user) {
   // Check for an active organization
   if (clerk.organization) {
     // Get list of organization invitations
-    const { totalCount, data } = await clerk.organization.getInvitations()
-      .then((res) => console.log(res))
-      .catch((error) => console.log(error.errors));
+    const { totalCount, data } = await clerk.organization.getInvitations();
 
     const invitations = data;
     console.log(`Invitations:`, invitations);
@@ -124,9 +122,7 @@ if (clerk.user) {
         // Check for an active organization
         if (Clerk.organization) {
         // Get list of organization invitations
-        const { totalCount, data } = await Clerk.organization.getInvitations()
-          .then((res) => console.log(res))
-          .catch((error) => console.log(error.errors));
+        const { totalCount, data } = await Clerk.organization.getInvitations();
 
         const invitations = data;
         console.log(`Invitations:`, invitations);
