DOCS-5932 add working examples to JS Organization reference (#822)

--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -1,11 +1,16 @@
 ---
-title: Organization
-description: This is a class that represents an organziation. It's returned from the createOrganization and getOrganization methods on the Clerk class instance.
+title: Organization object
+description: The Organization object holds information about an organization, as well as methods for managing it.
 ---
 
-# `Organization`
+# `Organization` object
 
-This is a class that represents an organization. It's returned from the [`createOrganization`](/docs/references/javascript/clerk/organization-methods#create-organization) and [`getOrganization`](/docs/references/javascript/clerk/organization-methods#get-organization) methods on [the `Clerk` class instance](/docs/references/javascript/clerk/clerk).
+The `Organization` object holds information about an organization, as well as methods for managing it.
+
+The following examples assume:
+
+- you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application
+- you have [enabled the Organizations feature in your Clerk Dashboard](/docs/organizations/overview#enable-organizations-in-your-application)
 
 ## Properties
 
@@ -42,31 +47,217 @@ function update(params: UpdateOrganizationParams): Promise<Organization>;
 | `name` | `string` | The organization name. |
 | `slug?` | `string \| undefined` | The organization slug. |
 
-#### Returns
+#### `update()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[Organization][org-ref]\></code> | This method returns a `Promise` which resolves to an [Organization][org-ref]. |
+| `Promise<Organization>` | This method returns a `Promise` which resolves to an [`Organization`](#organization) object. |
+
+#### `update()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js" {10}
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  // Check for an active organization
+  if (clerk.organization){
+    await clerk.organization.update({ name: "New Name" })
+    .then((res) => console.log(res))
+    .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html" {19}
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        // Check for an active organization
+        if (Clerk.organization){
+          await Clerk.organization.update({ name: "New Name" })
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 ### `destroy()`
 
 Deletes the organization. Only administrators can delete an organization.
 
-Please note that deleting an organization will also delete all memberships and invitations. This is not reversible.
+Deleting an organization will also delete all memberships and invitations. **This is not reversible.**
 
 ```typescript
 function destroy(): Promise<void>;
 ```
 
-#### Returns
+#### `destroy()` returns
 
 | Type | Description |
 | --- | --- |
 | `Promise<void>` | This method returns a `Promise` which doesn't resolve to any value. |
 
+#### `destroy()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js" {10}
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  // Check for an active organization
+  if (clerk.organization){
+    await clerk.organization.destroy()
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  } else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html" {19}
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        // Check for an active organization
+        if (Clerk.organization){
+          await Clerk.organization.destroy()
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ### `setLogo()`
 
-Sets or replaces an organization's logo.  Accept the logo as a file or blob. The logo must be an image and its  size cannot exceed 10MB.
+Sets or replaces an organization's logo. The logo must be an image and its size cannot exceed 10MB.
 
 ```typescript
 function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
@@ -76,13 +267,148 @@ function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `file` | `File \| Blob \| null` | An image file which cannot exceed 10MB. Passing `null` will delete the organization's current logo. |
+| `file` | `File \| Blob \| null` | An image file or blob which cannot exceed 10MB. Passing `null` will delete the organization's current logo. |
 
-#### Returns
+#### `setLogo()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[Organization][org-ref]\></code> | This method returns a `Promise` which resolves to an [Organization][org-ref]. |
+| `Promise<Organization>` | This method returns a `Promise` which resolves to an [`Organization`](#organization) object. |
+
+#### `setLogo()` example
+
+<InjectKeys>
+
+<Tabs type="npm-script" items={['NPM module', '<script>']}>
+  <Tab>
+    For the following example, your HTML file should look like this:
+
+    ```html filename="index.html"
+    <!doctype html>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Clerk + JavaScript App</title>
+      </head>
+      <body>
+        <div id="app"></div>
+
+        <input type="file" id="org-logo" />
+        <button id="upload-logo">Upload Logo</button>
+
+        <script type="module" src="/main.js"></script>
+      </body>
+    </html>
+    ```
+
+    And your JavaScript file should look like this:
+
+    ```js filename="main.js" {14}
+    import Clerk from '@clerk/clerk-js';
+
+    // Initialize Clerk with your Clerk publishable key
+    const clerk = new Clerk('{{pub_key}}');
+    await clerk.load();
+
+    if (clerk.user) {
+      // Check for an active organization
+      if (clerk.organization){
+        // Update the organization's logo
+        document.getElementById("upload-logo").addEventListener("click", () => {
+          const orgLogo = document.getElementById("org-logo").files[0];
+
+          clerk.organization.setLogo({ file: orgLogo })
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        });
+      } else {
+        // If there is no active organization,
+        // mount Clerk's <OrganizationSwitcher />
+        // to allow the user to set an organization as active
+        document.getElementById("app").innerHTML = `
+          <h2>Select an organization to set it as active</h2>
+          <div id="org-switcher"></div>
+        `;
+
+        const orgSwitcherDiv = document.getElementById("org-switcher");
+
+        clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+      }
+    } else {
+      document.getElementById("app").innerHTML = `
+        <div id="sign-in"></div>
+      `;
+
+      const signInDiv = document.getElementById("sign-in");
+
+      clerk.mountSignIn(signInDiv);
+    }
+    ```
+  </Tab>
+
+  <Tab>
+  ```html filename="index.html" {27}
+    <div id="app"></div>
+
+    <input type="file" id="org-logo" />
+    <button id="upload-logo">Upload Logo</button>
+
+    <!-- Initialize Clerk with your
+    Clerk publishable key and Frontend API URL -->
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key='{{pub_key}}'
+      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
+
+    <script>
+      window.addEventListener("load", async function () {
+        await Clerk.load();
+
+        if (Clerk.user) {
+          // Check for an active organization
+          if (Clerk.organization){
+            // Update the organization's logo
+            document.getElementById("upload-logo").addEventListener("click", () => {
+              const orgLogo = document.getElementById("org-logo").files[0];
+
+              Clerk.organization.setLogo({ file: orgLogo })
+                .then((res) => console.log(res))
+                .catch((error) => console.log("An error occurred:", error.errors));
+            });
+          } else {
+            // If there is no active organization,
+            // mount Clerk's <OrganizationSwitcher />
+            // to allow the user to set an organization as active
+            document.getElementById("app").innerHTML = `
+              <h2>Select an organization to set it as active</h2>
+              <div id="org-switcher"></div>
+            `;
+
+            const orgSwitcherDiv = document.getElementById("org-switcher");
+
+            Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+          }
+        } else {
+          document.getElementById("app").innerHTML = `
+            <div id="sign-in"></div>
+          `;
+
+          const signInDiv = document.getElementById("sign-in");
+
+          Clerk.mountSignIn(signInDiv);
+        }
+      });
+    </script>
+  ```
+  </Tab>
+</Tabs>
+
+</InjectKeys>
 
 ### `getRoles()`
 
@@ -103,7 +429,7 @@ function getRoles: (params?: GetRolesParams) => Promise<ClerkPaginatedResponse<R
 
 | Type | Description |
 | --- | --- |
-| `Promise<ClerkPaginatedResponse<RoleResource>>` | This method returns a `Promise` which resolves to a [ClerkPaginatedResponse](/docs/references/javascript/types/clerk-paginated-response) of [`RoleResource`](#role-resource) objects. |
+| `Promise<ClerkPaginatedResponse<RoleResource>>` | This method returns a `Promise` which resolves to a [`ClerkPaginatedResponse`](/docs/references/javascript/types/clerk-paginated-response) of [`RoleResource`](#role-resource) objects. |
 
 #### `RoleResource`
 
@@ -132,9 +458,102 @@ An *experimental* interface that includes information about a user's permission.
 | `createdAt` | `string` | The date and time the role was created. |
 | `updatedAt` | `string` | The date and time the role was last updated. |
 
+#### `getRoles()` example
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+```js filename="main.js" {10}
+import Clerk from '@clerk/clerk-js';
+
+// Initialize Clerk with your Clerk publishable key
+const clerk = new Clerk('{{pub_key}}');
+await clerk.load();
+
+if (clerk.user) {
+  // Check for an active organization
+  if (clerk.organization) {
+    await clerk.organization.getRoles()
+      .then((res) => console.log(res))
+      .catch((error) => console.log("An error occurred:", error.errors));
+  }else {
+    // If there is no active organization,
+    // mount Clerk's <OrganizationSwitcher />
+    // to allow the user to set an organization as active
+    document.getElementById("app").innerHTML = `
+      <h2>Select an organization to set it as active</h2>
+      <div id="org-switcher"></div>
+    `;
+
+    const orgSwitcherDiv = document.getElementById("org-switcher");
+
+    clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+  }
+} else {
+  document.getElementById("app").innerHTML = `
+    <div id="sign-in"></div>
+  `;
+
+  const signInDiv = document.getElementById("sign-in");
+
+  clerk.mountSignIn(signInDiv);
+}
+```
+
+```html filename="index.html" {19}
+  <div id="app"></div>
+
+  <!-- Initialize Clerk with your
+  Clerk publishable key and Frontend API URL -->
+  <script
+    async
+    crossorigin="anonymous"
+    data-clerk-publishable-key='{{pub_key}}'
+    src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+    type="text/javascript"
+  ></script>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+      if (Clerk.user) {
+        // Check for an active organization
+        if (Clerk.organization) {
+          await Clerk.organization.getRoles()
+            .then((res) => console.log(res))
+            .catch((error) => console.log("An error occurred:", error.errors));
+        } else {
+          // If there is no active organization,
+          // mount Clerk's <OrganizationSwitcher />
+          // to allow the user to set an organization as active
+          document.getElementById("app").innerHTML = `
+            <h2>Select an organization to set it as active</h2>
+            <div id="org-switcher"></div>
+          `;
+
+          const orgSwitcherDiv = document.getElementById("org-switcher");
+
+          Clerk.mountOrganizationSwitcher(orgSwitcherDiv);
+        }
+      } else {
+        document.getElementById("app").innerHTML = `
+          <div id="sign-in"></div>
+        `;
+
+        const signInDiv = document.getElementById("sign-in");
+
+        Clerk.mountSignIn(signInDiv);
+      }
+    });
+  </script>
+```
+</CodeBlockTabs>
+
+</InjectKeys>
+
 ## Additional methods
 
-In addition to the methods listed above, the [`Organization`][org-ref] class also has the following methods:
+In addition to the methods listed on this page, the `Organization` object also has the following methods:
 
 ### Members
 
@@ -146,7 +565,7 @@ In addition to the methods listed above, the [`Organization`][org-ref] class als
 
 ### Invitations
 
-- [`getPendingInvitations()`](/docs/references/javascript/organization/invitations#get-pending-invitations) (deprecated in favor of `getInvitations()`)
+- [`getPendingInvitations()` (deprecated)](/docs/references/javascript/organization/invitations#get-pending-invitations-deprecated)
 - [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations)
 - [`inviteMember()`](/docs/references/javascript/organization/invitations#invite-member)
 - [`inviteMembers()`](/docs/references/javascript/organization/invitations#invite-members)
@@ -155,5 +574,3 @@ In addition to the methods listed above, the [`Organization`][org-ref] class als
 - [`getDomains()`](/docs/references/javascript/organization/domains#get-domains)
 - [`getDomain()`](/docs/references/javascript/organization/domains#get-domain)
 - [`createDomain()`](/docs/references/javascript/organization/domains#create-domain)
-
-[org-ref]: /docs/references/javascript/organization/organization
