add missing comma in code example

--- a/docs/advanced-usage/satellite-domains.mdx
+++ b/docs/advanced-usage/satellite-domains.mdx
@@ -125,7 +125,7 @@ The `URL` parameter that can be passed to `isSatellite` and `domain` is the requ
         }
       },
       isSatellite: true,
-      signInUrl: 'https://primary.dev/sign-in'
+      signInUrl: 'https://primary.dev/sign-in',
       domain: url => url.host
     });
 
