Apply suggestions from code review

--- a/docs/troubleshooting/transferring-your-app.mdx
+++ b/docs/troubleshooting/transferring-your-app.mdx
@@ -1,13 +1,16 @@
 ---
 title: Issues with transferring the ownership of your application
-description: A guide covering some of the edge cases when transferring your application
+description: Learn how to transfer ownership of your Clerk application
 ---
 
-# Transferring ownership of your application
-To transfer your application, head to the [Settings view](https://dashboard.clerk.com/last-active?path=settings) within the Clerk Dashboard and select `Transfer Ownership`. From here you can transfer an application to your "Personal Account" or any Organization where you are an admin. 
+# Transfer ownership of your application
+
+To transfer your application:
+1. Navigate to the [Settings view](https://dashboard.clerk.com/last-active?path=settings) within the Clerk Dashboard.
+1. Select **Transfer Ownership**. From here you can transfer an application to your "Personal Account" or any Organization where you are an admin.
 
 
-## Transferring to an Org that does not have any billing methods
+## Transfer to an org without payment methods
 
 To ensure continuity in your subscription, an application with an existing paid subscription can only be transferred to an Organization with active payment methods. Some customers attempt to transfer ownership to a brand new Organization and expect the payment details to transfer but unfortunately this type of transfer is not allowed by our payment provider. 
 
