--- a/docs/errors/application.mdx
+++ b/docs/errors/application.mdx
@@ -86,6 +86,8 @@ Returned when an invalid plan is selected for a resource.
 }
 ```
 
+- [Learn how to fix this error](/docs/guides/transferring-your-app).
+
 ## `CannotTransferToAccountWithoutPaymentMethod`
 
 ```json 
@@ -95,3 +97,5 @@ Returned when an invalid plan is selected for a resource.
     "code":       "transfer_paid_app_to_account_with_no_payment_method_code"
 }
 ```
+
+- [Learn how to fix this error](/docs/guides/transferring-your-app).
