fix: Add await to user.reload() snippet to indicate it is async

--- a/docs/references/react/use-user.mdx
+++ b/docs/references/react/use-user.mdx
@@ -107,7 +107,7 @@ export default function Home() {
     }
 
     // If the update was successful, reload the user data
-    user.reload();
+    await user.reload();
   };
 
   return (
