SAML and Account linking
Introduce a new section that explains how SAML and Account linking works

--- a/docs/authentication/saml/overview.mdx
+++ b/docs/authentication/saml/overview.mdx
@@ -113,6 +113,26 @@ Now that everything is set up, you need to activate the SAML Connection via the 
 
 Everything should be set up now for you to try out authentication via SAML. Go to your application’s Sign In page and add your email in the input field. If it matches an active SAML Connection, you will be redirected to your IdP where you will sign in with your credentials.
 
+## Sync user attributes during Sign in
+During SAML SSO and after a user has successfully authenticated, the IdP provides Clerk with the corresponding user data. After each successful Sign in, we are making sure to keep the user data up to date
+based on the response of the SAML provider. You can disable this behavior by visiting the SAML Connection `Advanced` tab in your [Clerk Dashboard](https://dashboard.clerk.com/) and disabling the `Sync user attributes during sign-in` option.
+
+This setting is enabled by default.
+
+## Allow subdomains
+Authenticating via SAML SSO requires the user's email address domain to match the exact domain the SAML Connection has been configured with.
+
+To support SAML SSO with subdomains, you must enable the **Allow subdomains** option in the [Clerk Dashboard](https://dashboard.clerk.com/). You can find this setting in the SAML Connection **Advanced**.
+
+For example, a user with the email address `john@sales.example.com`
+will be able to use a SAML Connection with the `example.com` domain in order to authenticate.
+
+This setting is disabled by default.
+
+<Callout type="info">
+  To enable the Allow subdomains option, your SAML Connection domain must be an eTLD+1.
+</Callout>
+
 ## Glossary
 
 | Term | Explanation | Azure AD Terminology | Google Terminology | Okta Terminology |
