--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -1,6 +1,6 @@
 ---
-title: Integrate Azure SAML with Clerk
-description: Learn how to integrate .
+title: Microsoft Azure AD
+description: Learn how to integrate Microsoft Azure AD via SAML SSO.
 ---
 
 # Integrate Azure SAML with Clerk
