--- a/docs/authentication/saml/azure.mdx
+++ b/docs/authentication/saml/azure.mdx
@@ -3,7 +3,7 @@ title: Microsoft Azure AD
 description: Learn how to integrate Microsoft Azure AD via SAML SSO.
 ---
 
-# Integrate Azure SAML with Clerk
+# Microsoft Azure AD
 
 <TutorialHero
   beforeYouStart={[
